[tool.poetry]
name = "noid-minter"
version = "0.1.0"
description = ""
authors = ["MLE Slone <m.slone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyrand48 = "^0.1.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flakehell = "^0.9.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
