[project]
name = "noid-minter"
version = "0.1.7"
description = "An ARK minter based on Noid."
authors = [{ name = "MLE Slone", email = "m.slone@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = ["pyrand48>=0.1.4,<0.2"]

[project.urls]
Repository = "https://github.com/uklibraries/noid-minter/"

[dependency-groups]
dev = [
    "black>=24.10.0,<25",
    "flakehell>=0.9.0,<0.10",
    "isort>=5.13.2,<6",
    "pre-commit>=4.0.1,<5",
    "pytest>=8.3.3,<9",
    "pytest-watch>=4.2.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
